--- a/oes-core/src/main/resources/templates/include/js.html
+++ b/oes-core/src/main/resources/templates/include/js.html
@@ -29,3 +29,6 @@
 <script src="/static/plugins/echarts/echarts.min.js"></script>
 <!-- iCheck -->
 <script src="/static/plugins/iCheck/icheck.min.js"></script>
+<!-- 时间选择器 js -->
+<script src="/webjars/AdminLTE/3.0.0/plugins/daterangepicker/daterangepicker.js"></script>
+<script src="/webjars/AdminLTE/3.0.0/plugins/daterangepicker/moment.min.js"></script>
