--- a/oes-core/src/main/resources/templates/student/exam/api/paper-api.html
+++ b/oes-core/src/main/resources/templates/student/exam/api/paper-api.html
@@ -3,7 +3,7 @@
     //表格操作
     window.handle = {
         "click .goPaper": function (e, value, row, index) {
-            OesUtil.ajaxPage("#exam","/student/paper/" + row.id);
+            OesUtil.ajaxPage("#exam", "/student/paper/" + row.id);
         },
     };
 
@@ -22,7 +22,7 @@
     }
 
     // 初始化表单
-    OesUtil.initNormalTable('#paperInfo', "/api/paper/list", "get", [{
+    OesUtil.initNormalTable('#paperInfo', "/api/paper/list?paperType=正式&majorId=${session.student.majorId}", "get", [{
         title: '考试',
         field: 'paperName',
         sortable: false
