--- a/oes-core/src/main/resources/templates/student/exam/api/practice-api.html
+++ b/oes-core/src/main/resources/templates/student/exam/api/practice-api.html
@@ -3,7 +3,7 @@
     //表格操作
     window.handle = {
         "click .goPaper": function (e, value, row, index) {
-            OesUtil.ajaxPage("#exam","/student/paper/" + row.id);
+            OesUtil.ajaxPage("#exam", "/student/paper/" + row.id);
         },
     };
 
@@ -14,7 +14,7 @@
     }
 
     // 初始化表单
-    OesUtil.initNormalTable('#practiceInfo', "/api/paper/practice/list", "get", [{
+    OesUtil.initNormalTable('#practiceInfo', "/api/paper/list?paperType=模拟&majorId=${session.student.majorId}", "get", [{
         title: '考试',
         field: 'paperName',
         sortable: false
