--- a/oes-core/src/main/resources/templates/teacher/exam/list.html
+++ b/oes-core/src/main/resources/templates/teacher/exam/list.html
@@ -3,40 +3,23 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>OES | 考试列表</title>
-    <!-- 时间选择器 -->
-    <link rel="stylesheet" href="/webjars/AdminLTE/3.0.0/plugins/daterangepicker/daterangepicker.css">
+    <title>OES | 教师端</title>
     <!-- 引入全局 css 文件 -->
-    <%include("../../include/css.html"){}%>
-    <!-- 样式 -->
-    <style>
-        .table > tbody > tr:hover {
-            cursor: pointer;
-        }
-
-        .table > tbody > tr > td {
-            vertical-align: middle;
-        }
-
-        th {
-            font-size: 15px;
-            text-align: center;
-        }
-
-        td {
-            font-size: 15px;
-            text-align: center;
-        }
-    </style>
+    <%include("../../include/css.html"){} %>
 </head>
-<body class="hold-transition skin-blue sidebar-mini">
+<body class="hold-transition sidebar-mini layout-fixed layout-navbar-fixed layout-footer-fixed">
 <div class="wrapper">
     <!-- 引入头部 -->
     <% include("../include/header.html"){} %>
     <!-- 左侧菜单栏 -->
     <% layout("../include/sider.html",{name:"exam"}){} %>
+    <!-- 引入全局 js 脚本文件 -->
+    <% include("../../include/js.html"){} %>
     <!-- 右侧内容部分 -->
     <div class="content-wrapper">
+        <%
+        #ajax examTable:{
+        %>
         <!-- Content Header (Page header) -->
         <section class="content-header">
             <div class="container-fluid">
@@ -58,38 +41,8 @@
                                 <h3 class="card-title">试卷列表</h3>
                             </div>
                             <!-- /.card-header -->
-                            <div class="card-body table-responsive p-0">
-                                <table class="table table-hover">
-                                    <tbody>
-                                    <% if(isEmpty(paperList)){ %>
-                                    <tr>
-                                        <td colspan="6">暂无需要管理的考试</td>
-                                    </tr>
-                                    <% } %>
-                                    <% if(isNotEmpty(paperList)){ %>
-                                    <tr>
-                                        <th style="width: 10%">序号</th>
-                                        <th style="width: 20%">名称</th>
-                                        <th style="width: 20%">开考时间</th>
-                                        <th style="width: 20%">结束时间</th>
-                                        <th style="width: 10%">时长</th>
-                                        <th style="width: 20%">操作</th>
-                                    </tr>
-                                    <% } %>
-                                    <% for( paper in paperList ){ %>
-                                    <tr class="rowDetail" rel="${paper.id}">
-                                        <td>${paperLP.index}</td>
-                                        <td>${paper.paperName}</td>
-                                        <td>${paper.beginTime}</td>
-                                        <td>${paper.endTime}</td>
-                                        <td>${paper.allowTime}</td>
-                                        <td>
-                                            <a onclick="goUpdate(${paper.id})" class="btn btn-sm btn-warning">修改时间</a>
-                                        </td>
-                                    </tr>
-                                    <% } %>
-                                    </tbody>
-                                </table>
+                            <div class="card-body">
+                                <table id="examInfo" class="table table-bordered table-striped text-nowrap"></table>
                             </div>
                         </div>
                     </div>
@@ -97,22 +50,18 @@
                 </div>
             </div><!-- /.row -->
         </section>
+        <!-- 修改时间模态框 -->
+        <% include("update-modal.html"){} %>
+        <!-- 接口 -->
+        <% include("api.html"){} %>
+        <%}%>
     </div>
+    <aside class="control-sidebar control-sidebar-dark">
+        <!-- Control sidebar content goes here -->
+    </aside>
     <!-- 引入footer -->
-    <% include("../../include/footer.html"){} %>
-    <!-- 修改时间模态框 -->
-    <% include("update-modal.html"){} %>
+    <% include("../../include/footer.html"){}%>
+    <%include("../main/api.html"){}%>
 </div>
-<!-- 引入全局 js 脚本文件 -->
-<% include("../../include/js.html"){} %>
-<!-- 时间选择器 js -->
-<script src="/webjars/AdminLTE/3.0.0/plugins/daterangepicker/daterangepicker.js"></script>
-<script src="/webjars/AdminLTE/3.0.0/plugins/daterangepicker/moment.min.js"></script>
-<!-- 自定义工具 -->
-<script src="/static/js/OesUtil.js"></script>
-<!-- 接口 -->
-<% include("api.html"){} %>
 </body>
 </html>
-
-
