--- a/oes-core/src/main/resources/templates/teacher/paper/import-paper.html
+++ b/oes-core/src/main/resources/templates/teacher/paper/import-paper.html
@@ -3,20 +3,23 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>OES | 新增试卷</title>
+    <title>OES | 教师端</title>
     <!-- 引入全局 css 文件 -->
-    <% include("../../include/css.html"){} %>
-    <!-- 时间选择器样式 -->
-    <link rel="stylesheet" href="/webjars/AdminLTE/3.0.0/plugins/daterangepicker/daterangepicker.css">
+    <%include("../../include/css.html"){} %>
 </head>
 <body class="hold-transition sidebar-mini layout-fixed layout-navbar-fixed layout-footer-fixed">
 <div class="wrapper">
     <!-- 引入头部 -->
-    <% include("../../teacher/include/header.html"){} %>
+    <% include("../include/header.html"){} %>
     <!-- 左侧菜单栏 -->
-    <% layout("../../teacher/include/sider.html",{name:"import-paper"}){} %>
+    <% layout("../include/sider.html",{name:"import-paper"}){} %>
+    <!-- 引入全局 js 脚本文件 -->
+    <% include("../../include/js.html"){} %>
     <!-- 右侧内容部分 -->
     <div class="content-wrapper">
+        <%
+        #ajax importTable:{
+        %>
         <!-- Content Header (Page header) -->
         <section class="content-header">
             <div class="container-fluid">
@@ -26,7 +29,9 @@
                     </div>
                     <div class="col-sm-6">
                         <ol class="breadcrumb float-sm-right">
-                            <li class="breadcrumb-item"><a href="/teacher/paper">返回列表</a></li>
+                            <li class="breadcrumb-item">
+                                <button class="btn btn-sm btn-success" onclick="history.go(-1);">返回列表</button>
+                            </li>
                         </ol>
                     </div>
                 </div>
@@ -300,9 +305,9 @@
                             </div>
                             <div class="card-footer clearfix bg-white">
                                 <div class="form-group float-right">
-                                        <a href="javascript:history.go(0)" class="btn btn-warning"
-                                           id="reset">重置</a>&nbsp;
-                                        <button class="btn btn-primary " id="saveImportBtn">保存</button>
+                                    <a href="javascript:history.go(0)" class="btn btn-warning"
+                                       id="reset">重置</a>&nbsp;
+                                    <button class="btn btn-primary " id="saveImportBtn">保存</button>
                                 </div>
                             </div>
                         </div>
@@ -311,18 +316,19 @@
                 </div>
             </div><!-- /.row -->
         </section>
+        <!-- 接口 -->
+        <%include("api/import-paper-api.html"){}%>
+        <%}%>
     </div>
+    <aside class="control-sidebar control-sidebar-dark">
+        <!-- Control sidebar content goes here -->
+    </aside>
     <!-- 引入footer -->
-    <%include("../../include/footer.html"){} %>
-</div><!-- 引入全局 js 脚本文件 -->
-<% include("../../include/js.html"){} %>
-<!-- 时间选择器 js -->
-<script src="/webjars/AdminLTE/3.0.0/plugins/daterangepicker/daterangepicker.js"></script>
-<script src="/webjars/AdminLTE/3.0.0/plugins/daterangepicker/moment.min.js"></script>
-<!-- 自定义工具 -->
-<script src="/static/js/OesUtil.js"></script>
-<!-- 接口 -->
-<%include("api/import-paper-api.html"){}%>
+    <% include("../../include/footer.html"){}%>
+    <%include("../main/api.html"){}%>
+    <!-- Control Sidebar -->
+</div>
 </body>
 </html>
+
 
