--- a/oes-core/src/main/resources/templates/teacher/paper/save-paper-form.html
+++ b/oes-core/src/main/resources/templates/teacher/paper/save-paper-form.html
@@ -3,18 +3,23 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>OES | 新增试卷</title>
+    <title>OES | 教师端</title>
     <!-- 引入全局 css 文件 -->
-    <%include("../../include/css.html"){}%>
+    <%include("../../include/css.html"){} %>
 </head>
 <body class="hold-transition sidebar-mini layout-fixed layout-navbar-fixed layout-footer-fixed">
 <div class="wrapper">
     <!-- 引入头部 -->
-    <%include("../../teacher/include/header.html"){} %>
+    <% include("../include/header.html"){} %>
     <!-- 左侧菜单栏 -->
-    <% layout("../../teacher/include/sider.html",{name:"save-paper-form"}){} %>
+    <% layout("../include/sider.html",{name:"save-paper-form"}){} %>
+    <!-- 引入全局 js 脚本文件 -->
+    <% include("../../include/js.html"){} %>
     <!-- 右侧内容部分 -->
     <div class="content-wrapper">
+        <%
+        #ajax paperFormTable:{
+        %>
         <!-- Content Header (Page header) -->
         <section class="content-header">
             <div class="container-fluid">
@@ -24,7 +29,9 @@
                     </div>
                     <div class="col-sm-6">
                         <ol class="breadcrumb float-sm-right">
-                            <li class="breadcrumb-item"><a href="/teacher/paper">返回列表</a></li>
+                            <li class="breadcrumb-item">
+                                <button class="btn btn-sm btn-success" onclick="history.go(-1);">返回列表</button>
+                            </li>
                         </ol>
                     </div>
                 </div>
@@ -32,7 +39,7 @@
         </section>
 
 
-        <section class="content">
+        <section class=" content">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-12">
@@ -42,38 +49,47 @@
                                 <form method="post" id="save-paper-form" class="form-horizontal">
                                     <div class="card-header">
                                         <div class="card-title">单选题</div>
-                                    </div><br>
+                                    </div>
+                                    <br>
                                     <div class="form-group row">
                                         <div class="col-sm-6">
-                                            <input type="text" class="form-control" name="qChoiceNum" autocomplete="off"
+                                            <input type="text" class="form-control"
+                                                   name="qChoiceNum" autocomplete="off"
                                                    placeholder="数量">
                                         </div>
                                         <div class="col-sm-6">
-                                            <input type="text" class="form-control" name="qChoiceScore"
+                                            <input type="text" class="form-control"
+                                                   name="qChoiceScore"
                                                    autocomplete="off" placeholder="每题分值">
                                         </div>
                                     </div>
 
                                     <div class="card-header">
                                         <div class="card-title">多选题</div>
-                                    </div><br>
+                                    </div>
+                                    <br>
                                     <div class="form-group row">
                                         <div class="col-sm-6">
-                                            <input type="text" class="form-control" name="qMulChoiceNum" autocomplete="off"
+                                            <input type="text" class="form-control"
+                                                   name="qMulChoiceNum"
+                                                   autocomplete="off"
                                                    placeholder="数量">
                                         </div>
                                         <div class="col-sm-6">
-                                            <input type="text" class="form-control" name="qMulChoiceScore"
+                                            <input type="text" class="form-control"
+                                                   name="qMulChoiceScore"
                                                    autocomplete="off" placeholder="每题分值">
                                         </div>
                                     </div>
 
                                     <div class="card-header">
                                         <div class="card-title">判断题</div>
-                                    </div><br>
+                                    </div>
+                                    <br>
                                     <div class="form-group row">
                                         <div class="col-sm-6">
-                                            <input type="text" class="form-control" name="qTofNum" autocomplete="off"
+                                            <input type="text" class="form-control" name="qTofNum"
+                                                   autocomplete="off"
                                                    placeholder="数量">
                                         </div>
                                         <div class="col-sm-6">
@@ -84,24 +100,29 @@
 
                                     <div class="card-header">
                                         <div class="card-title">填空题</div>
-                                    </div><br>
+                                    </div>
+                                    <br>
                                     <div class="form-group row">
                                         <div class="col-sm-6">
-                                            <input type="text" class="form-control" name="qFillNum" autocomplete="off"
+                                            <input type="text" class="form-control" name="qFillNum"
+                                                   autocomplete="off"
                                                    placeholder="数量">
                                         </div>
                                         <div class="col-sm-6">
-                                            <input type="text" class="form-control" name="qFillScore"
+                                            <input type="text" class="form-control"
+                                                   name="qFillScore"
                                                    autocomplete="off" placeholder="每题分值">
                                         </div>
                                     </div>
 
                                     <div class="card-header">
                                         <div class="card-title">简答题</div>
-                                    </div><br>
+                                    </div>
+                                    <br>
                                     <div class="form-group row">
                                         <div class="col-sm-6">
-                                            <input type="text" class="form-control" name="qSaqNum" autocomplete="off"
+                                            <input type="text" class="form-control" name="qSaqNum"
+                                                   autocomplete="off"
                                                    placeholder="数量">
                                         </div>
                                         <div class="col-sm-6">
@@ -112,14 +133,18 @@
 
                                     <div class="card-header">
                                         <div class="card-title">编程题</div>
-                                    </div><br>
+                                    </div>
+                                    <br>
                                     <div class="form-group row">
                                         <div class="col-sm-6">
-                                            <input type="text" class="form-control" name="qProgramNum" autocomplete="off"
+                                            <input type="text" class="form-control"
+                                                   name="qProgramNum"
+                                                   autocomplete="off"
                                                    placeholder="数量">
                                         </div>
                                         <div class="col-sm-6">
-                                            <input type="text" class="form-control" name="qProgramScore"
+                                            <input type="text" class="form-control"
+                                                   name="qProgramScore"
                                                    autocomplete="off" placeholder="每题分值">
                                         </div>
                                     </div>
@@ -139,14 +164,18 @@
                 </div>
             </div><!-- /.row -->
         </section>
+        <!-- 接口 -->
+        <%include("api/save-paper-form-api.html"){}%>
+        <%}%>
     </div>
+    <aside class="control-sidebar control-sidebar-dark">
+        <!-- Control sidebar content goes here -->
+    </aside>
     <!-- 引入footer -->
-    <%include("../../include/footer.html"){} %>
+    <% include("../../include/footer.html"){}%>
+    <%include("../main/api.html"){}%>
+    <!-- Control Sidebar -->
 </div>
-<!-- 引入全局 js 脚本文件 -->
-<% include("../../include/js.html"){} %>
-<!-- 接口 -->
-<%include("api/save-paper-form-api.html"){}%>
 </body>
 </html>
 
